--- a/src/index.css
+++ b/src/index.css
@@ -2564,98 +2564,6 @@ tbody.collapse.show {
     text-decoration: none;
     background-color: #1d2124; }
 
-.alert {
-  position: relative;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
-  border: 1px solid transparent;
-  border-radius: 0.0625rem; }
-
-.alert-heading {
-  color: inherit; }
-
-.alert-link {
-  font-weight: 600; }
-
-.alert-dismissible .close {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0.75rem 1.25rem;
-  color: inherit; }
-
-.alert-primary {
-  color: #004b85;
-  background-color: #cce9ff;
-  border-color: #b8e0ff; }
-  .alert-primary hr {
-    border-top-color: #9fd5ff; }
-  .alert-primary .alert-link {
-    color: #002e52; }
-
-.alert-secondary {
-  color: #737678;
-  background-color: #f8f9fa;
-  border-color: #f6f7f8; }
-  .alert-secondary hr {
-    border-top-color: #e8eaed; }
-  .alert-secondary .alert-link {
-    color: #5a5c5e; }
-
-.alert-success {
-  color: #155724;
-  background-color: #d4edda;
-  border-color: #c3e6cb; }
-  .alert-success hr {
-    border-top-color: #b1dfbb; }
-  .alert-success .alert-link {
-    color: #0b2e13; }
-
-.alert-info {
-  color: #0c5460;
-  background-color: #d1ecf1;
-  border-color: #bee5eb; }
-  .alert-info hr {
-    border-top-color: #abdde5; }
-  .alert-info .alert-link {
-    color: #062c33; }
-
-.alert-warning {
-  color: #856815;
-  background-color: #fff4d4;
-  border-color: #fff0c3; }
-  .alert-warning hr {
-    border-top-color: #ffeaaa; }
-  .alert-warning .alert-link {
-    color: #59460e; }
-
-.alert-danger {
-  color: #721c24;
-  background-color: #f8d7da;
-  border-color: #f5c6cb; }
-  .alert-danger hr {
-    border-top-color: #f1b0b7; }
-  .alert-danger .alert-link {
-    color: #491217; }
-
-.alert-light {
-  color: #818182;
-  background-color: #fefefe;
-  border-color: #fdfdfe; }
-  .alert-light hr {
-    border-top-color: #ececf6; }
-  .alert-light .alert-link {
-    color: #686868; }
-
-.alert-dark {
-  color: #1b1e21;
-  background-color: #d6d8d9;
-  border-color: #c6c8ca; }
-  .alert-dark hr {
-    border-top-color: #b9bbbe; }
-  .alert-dark .alert-link {
-    color: #040505; }
-
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -4949,10 +4857,44 @@ a.btn-warning:visited, a.btn-warning:link {
     .cp-dropdown .cp-dropdown--item.active {
       background: #e9ecef; }
 
+.table th {
+  color: #adb5bd;
+  font-weight: 400;
+  font-size: 13px; }
+
+.Alert {
+  padding: 0.25rem 1rem;
+  padding-right: 2rem;
+  margin: 1rem;
+  border-radius: 0.0625rem;
+  background-color: rgba(255, 200, 41, 0.2); }
+  .Alert p {
+    line-height: 1.15; }
+
+.tooltipContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
+.Tooltip {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: #000;
+  color: white;
+  padding: 0.5rem;
+  font-size: 13px;
+  border-radius: 4px; }
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif; }
+
+.App {
+  position: relative; }
 
 .Modal {
   padding: 2rem;
@@ -4990,12 +4932,6 @@ a.active, a.active:link, a.active:visited {
   padding: 1rem;
   margin: 1rem 0;
   border: 1px solid #f1f3f5; }
-
-.Alert {
-  padding: 0.25rem 1rem;
-  margin: 1rem;
-  background-color: rgba(240, 150, 0, 0.15);
-  border-radius: 2px; }
 
 p {
   margin: 0.5rem; }
