style header component

--- a/src/index.css
+++ b/src/index.css
@@ -4690,6 +4690,13 @@ body {
 .text-smaller {
   font-size: 0.875rem; }
 
+.page-title {
+  font-size: 1.5rem;
+  padding-left: 1rem; }
+
+.grid-title {
+  font-size: 1rem; }
+
 .card {
   padding: 1rem;
   border: 1px solid #dee2e6;
@@ -4923,6 +4930,42 @@ a.btn-warning:visited, a.btn-warning:link {
   font-size: 13px;
   border-radius: 4px; }
 
+.nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  line-height: 1rem; }
+
+.nav li {
+  display: inline-block; }
+  .nav li:hover a {
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2); }
+  .nav li a:link, .nav li a:visited {
+    display: block;
+    padding: 0.5rem;
+    margin: 1rem 0.25rem;
+    color: #868e96; }
+  .nav li a.active, .nav li a.active:link, .nav li a.active:visited {
+    color: #0090FF;
+    box-shadow: 0 2px 0 #0090FF; }
+
+.Header {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  padding: 0.5rem 1rem;
+  padding-left: 6rem;
+  height: 80px; }
+  .Header .logo-container {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 96px; }
+    .Header .logo-container .logo-image {
+      max-height: 100%; }
+
 body {
   margin: 0;
   padding: 0; }
@@ -4941,31 +4984,8 @@ body {
   bottom: 0;
   right: 0; }
 
-.nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: 13px; }
-
-.nav li {
-  display: inline-block;
-  padding: 0.5rem; }
-
-a.active, a.active:link, a.active:visited {
-  color: red; }
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.5rem 1rem; }
-
 .text-muted {
   color: #727579; }
-
-.card {
-  padding: 1rem;
-  margin: 1rem 0;
-  border: 1px solid #f1f3f5; }
 
 p {
   margin: 0.5rem; }
