--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "node_modules/b2b-styles/src/style/style.scss";
+@import "./styles/Header";
 
 body {
   margin: 0;
@@ -21,36 +22,8 @@ body {
   right: 0;
 }
 
-.nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: 13px;
-}
-
-.nav li {
-  display: inline-block;
-  padding: 0.5rem;
-}
-
-a.active, a.active:link, a.active:visited {
-  color: red;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.5rem 1rem;
-}
-
 .text-muted {
   color: #727579;
-}
-
-.card {
-  padding: 1rem;
-  margin: 1rem 0;
-  border: 1px solid #f1f3f5;
 }
 
 p {
