--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
 @import "node_modules/b2b-styles/src/style/style.scss";
 @import "./styles/Header";
 @import "./styles/DropdownSmooth";
+@import "./styles/CpGrid";
 
 body {
   margin: 0;
   padding: 0;
+
 }
 
 .App {
