--- a/src/styles/_DropdownSmooth.sass
+++ b/src/styles/_DropdownSmooth.sass
@@ -34,6 +34,7 @@
     border-top: 6px solid $primary
     max-width: 320px
     min-width: 120px
+    +transition($transition-base)
 
     // triangle on the top
     &::before
