--- a/src/styles/_CpGrid.sass
+++ b/src/styles/_CpGrid.sass
@@ -1,2 +1,13 @@
 .CpGrid
-  
+  // font-family: 'Roboto Mono', monospace
+  .big-value
+    font-size: 1rem !important
+  .description
+    display: inline-block
+    vertical-align: middle
+    min-width: 160px
+    max-width: 240px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
+    color: $text-muted
