implement base Orders, LoadHistory componnets. Improve headers--blocks styleing

--- a/src/styles/_Header.sass
+++ b/src/styles/_Header.sass
@@ -5,7 +5,6 @@
   padding: 0.5rem 1rem
   padding-left: 6rem
   height: 80px
-  // font-weight: 700
 
   .logo-container
     position: absolute
@@ -16,3 +15,14 @@
 
     .logo-image
       max-height: 100%
+
+  .header--block
+    font-size: 13px
+    line-height: 1rem
+    margin: 1rem 0
+    margin-right: 0.5rem
+    &:last-0f-type
+      margin-right: 0
+
+  .nav-wrapper
+    flex-grow: 2
