--- a/src/index.css
+++ b/src/index.css
@@ -4985,8 +4985,7 @@ a.btn-warning:visited, a.btn-warning:link {
   margin: 0;
   padding: 0;
   font-size: 13px;
-  line-height: 1rem;
-  flex-grow: 2; }
+  line-height: 1rem; }
 
 .nav li {
   display: inline-block; }
@@ -4995,7 +4994,7 @@ a.btn-warning:visited, a.btn-warning:link {
   .nav li a:link, .nav li a:visited {
     display: block;
     padding: 0.5rem;
-    margin: 1rem 0.25rem;
+    margin: 0 0.25rem;
     color: #868e96; }
   .nav li a.active, .nav li a.active:link, .nav li a.active:visited {
     color: #0090FF;
@@ -5016,6 +5015,15 @@ a.btn-warning:visited, a.btn-warning:link {
     height: 96px; }
     .Header .logo-container .logo-image {
       max-height: 100%; }
+  .Header .header--block {
+    font-size: 13px;
+    line-height: 1rem;
+    margin: 1rem 0;
+    margin-right: 0.5rem; }
+    .Header .header--block:last-0f-type {
+      margin-right: 0; }
+  .Header .nav-wrapper {
+    flex-grow: 2; }
 
 .DropdownSmooth {
   position: relative; }
@@ -5106,14 +5114,6 @@ body {
 .App {
   position: relative; }
 
-.header-item-container {
-  margin: 1rem 0.5rem; }
-  .header-item-container p {
-    margin: 0;
-    padding: 0.5rem;
-    line-height: 1rem;
-    font-size: 13px; }
-
 .Modal {
   padding: 2rem;
   color: white;
@@ -5124,9 +5124,6 @@ body {
   left: 0;
   bottom: 0;
   right: 0; }
-
-.text-muted {
-  color: #727579; }
 
 p {
   margin: 0.5rem; }
