--- a/src/styles/_CpGrid.sass
+++ b/src/styles/_CpGrid.sass
@@ -20,3 +20,7 @@
     &:hover
       .btn-cell-context-menu
         opacity: 1
+
+    &.table-link
+      color: $primary
+      text-decoration: underline
